add password recovery feature
