# src/modules/auth/auth.routes.js
@@ -3,8 +3,10 @@ const validateRequestMiddleware = require('../core/middlewares/validateRequest.m
 const loginSchema = require('./schemas/login.schema');
 const logoutSchema = require('./schemas/logout.schema');
 const refreshTokenSchema = require('./schemas/refreshtoken.schema');
+const resetPasswordSchema = require('./schemas/resetPassword.schema');
+const forgotPasswordSchema = require('./schemas/forgotPassword.schema');
 
-module.exports = ({ authController, verifyTokenMiddleware }) => {
+module.exports = ({ authController }) => {
   const router = Router();
 
   router.post(
@@ -23,6 +25,18 @@ module.exports = ({ authController, verifyTokenMiddleware }) => {
     '/refresh-token',
     validateRequestMiddleware(refreshTokenSchema),
     authController.refreshToken.bind(authController)
+  );
+
+  router.post(
+    '/forgot-password',
+    validateRequestMiddleware(forgotPasswordSchema),
+    authController.forgotPassword.bind(authController)
+  );
+
+  router.post(
+    '/reset-password',
+    validateRequestMiddleware(resetPasswordSchema),
+    authController.resetPassword.bind(authController)
   );
 
   return router;
